refactor: improve global exception handling